--- a/Bloge/index.html
+++ b/Bloge/index.html
@@ -30,7 +30,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
+        <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -53,6 +53,22 @@
                     <li>
                         <a href="#">Contacts</a>
                     </li>
+                </ul>
+                <ul class="nav navbar-nav pull-right nav-search">
+                    <li class="">
+                        <form class="navbar-form navbar-left" role="search">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Search">
+                            </div>
+                            <button type="submit" class="btn btn-default">Submit</button>
+                        </form>
+                    </li>
+                    <!-- User Info and Avatar -->
+                    <li><p class="navbar-text">Username</p></li>
+                    <li class="ui-things">
+                        <img src="http://placehold.it/32x32" alt="Your Avatar">
+                    </li>
+                    <li class="ui-things"><a href="#">Logout</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -101,7 +117,7 @@
 
             <div class="col-md-3">
                 <div class="sidebar">
-                <div class="panel panel-default">
+                <div class="panel panel-default sidebar-first">
                     <div class="panel-heading">Sidebar Title</div>
                     <ul class="list-group">
                         <a href="#"><li class="list-group-item"><span class="glyphicon glyphicon-pushpin"></span> Cras justo odio</li></a>
@@ -112,10 +128,10 @@
                     </ul>
                 </div>
 
-                <div class="panel panel-default">
+                <div class="panel panel-default sidebar-second">
                     <div class="panel-heading">Another sidebar title</div>
                     <div class="panel-body">
-                        <img src="http://placehold.it/264x400">
+                        <img src="http://placehold.it/260x400">
                     </div>
                 </div>
             </div>
