--- a/lifefuck/0/index.html
+++ b/lifefuck/0/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link rel="icon" href="favicon.png">
 </head>
 <body>
   
@@ -17,7 +18,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center black-text">Lifefuck.0 [relaunch]</h1>
+        <h1 class="header center black-text light">Lifefuck.0 [relaunch]</h1>
         <h2 class="header center amber-text light">1001 ночь</h2>
         <div class="row center">
           <h5 class="header col s12 light amber-text">История трёх дней из жизни студента ХАИ</h5>
