Index page text update

--- a/lifefuck/0/index.html
+++ b/lifefuck/0/index.html
@@ -260,6 +260,10 @@
            Далее на главной площади нам объявили рейтинг групп, в котором мы заняли 2е место. После чего мы расселись по автобусам и поехали домой.
            <br>
            Дорога получилась веселой, т.к. большинство людей были пьяными. Опять тысячу раз повторили кричалки, некоторые чуть не подрались даже, некоторые пили водку с горла, некоторые просто умирали. 
+           <br>
+           Но не взирая на это, многие шли и добивали себя алкоголем, уже на молодости или в общагах. Знаете, как старые вояки, которые вернулись домой, но они не могут приспособиться к тому, что война уже закончилась. 
+           <br>
+           Так или иначе, но праздник останется у нас в памяти. Местами странный, местами глупый, местами смешной, но уж точно веселый. 
           </p>
         </div>
       </div>
