--- a/lifefuck/0/index.html
+++ b/lifefuck/0/index.html
@@ -226,7 +226,7 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <p class="left-align light">
-           Далее следовала "клятва настоящего хаёвца". Суть заключается в том, что каждый участник большую клятву по две строчки, если запинается - пьет водку и начинает сначала. Но у нас всё было культурнее, мы делали это вместе и не ресетили чтение при запинании.
+           Далее следовала "клятва настоящего хаёвца". Суть заключается в том, что каждый участник читает большую клятву по две строчки, если запинается - пьет водку и начинает сначала. Но у нас всё было культурнее, мы делали это вместе и не ресетили чтение при запинании.
            <br>
            После этого нам должны были выдать дипломы настоящего хаёвцаПосле этого нам вручили дипломы и все съебались хуй знает куда. Я еще пожег костер, а потом пошел спать. 
           </p>
