--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>My Projects</h2>
-                <p>Here some my projects that replaces on my GitHub and can be seen here.</p>
+                <p>There are some of my projects. All of them can be found on my GitHub	<i>(link below)</i>.</p>
             </div>
         </div>
     </section>
