--- a/telegram/index.html
+++ b/telegram/index.html
@@ -9,7 +9,7 @@
 <body class="bg-inverse">
 <div class="container">
     <div class="row">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
 
             <br>
             <div class="card bg-faded text-muted ">
